syntax = "proto3";
package hdachmh.swapmodule.tokenswap;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "tokenswap/token.proto";
import "tokenswap/swap_request.proto";

option go_package = "github.com/hdac-hmh/swap-module/x/tokenswap/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2
	rpc Token(QueryGetTokenRequest) returns (QueryGetTokenResponse) {
		option (google.api.http).get = "/hdac-hmh/swapmodule/tokenswap/token/{id}";
	}
	rpc TokenAll(QueryAllTokenRequest) returns (QueryAllTokenResponse) {
		option (google.api.http).get = "/hdac-hmh/swapmodule/tokenswap/token";
	}

	rpc SwapRequest(QueryGetSwapRequestRequest) returns (QueryGetSwapRequestResponse) {
		option (google.api.http).get = "/hdac-hmh/swapmodule/tokenswap/SwapRequest/{id}";
	}
	rpc SwapRequestAll(QueryAllSwapRequestRequest) returns (QueryAllSwapRequestResponse) {
		option (google.api.http).get = "/hdac-hmh/swapmodule/tokenswap/SwapRequest";
	}

}

// this line is used by starport scaffolding # 3
message QueryGetTokenRequest {
	uint64 id = 1;
}

message QueryGetTokenResponse {
	Token Token = 1;
}

message QueryAllTokenRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTokenResponse {
	repeated Token Token = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
message QueryGetSwapRequestRequest {
	uint64 id = 1;
}

message QueryGetSwapRequestResponse {
	SwapRequest SwapRequest = 1;
}

message QueryAllSwapRequestRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSwapRequestResponse {
	repeated SwapRequest SwapRequest = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
